@@ -82,8 +82,10 @@
 * updated documentation
 
 1.0.7 (current) - WORK IN PROGRESS
+----------------
 * added servicegroup include and exclude filter
 * redid the notification rule's in contacts.pm
 * fixed missing hostgroup column in the SQL files for upgrading/new installation
 * added logic to sending notifications. A Contact will only get one notification per method, this to make it easier to make notification rules that may overlap, without spamming the contact excessively.
+* added indexes to speed up MySQL performance 100 fold in setups with thousands of notifications.
 * updated documentation
